applications/kubernetes/media/huntarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: huntarr
  namespace: media 
spec:
  ports:
  - name: web
    port: 9705
  selector:
    app: huntarr
